--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ nav[id="home"]{
 }
 
 span{
-    color: yellowgreen;
+    color: rgb(250, 234, 10);
 }
 
 .grid2{
@@ -103,7 +103,7 @@ span{
 /*penúltima sección*/
 
 .grid3 {
-    background-color: yellow;
+    background-color: white;
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -111,7 +111,7 @@ span{
 }
 
 .info{
-    font-size: large; /*añadir padding*/
+    font-size: large;
     justify-content: center;
     padding: 10px;
 }
@@ -136,7 +136,7 @@ span{
     grid-column: 1 / 3;
     grid-row: 3 / 5;
 }
-input[type="email"]{
+body input[type="email"]{
     height: 50px; 
     width: 250px; 
 }
@@ -153,5 +153,33 @@ textarea{
 .Message2{
     grid-column: 1;
     grid-row: 5;
-    height: 100px;
+}
+
+input[type="submit"]{
+    height: 50px; 
+    width: 250px;
+    background-color: orange;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    border-radius: 15px;
+}
+
+/* Esto es un footer temporal*/
+
+footer{
+    background-color: gainsboro;
+}
+footer h1{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+footer input[type="email"]{
+    border-color: yellow;
+    font-size: 20px;
+    width: 500px;
+    height: 30px;
+    margin: 10px;
 }
