--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,7 +5,8 @@ footer{
 }
 
 .grid_footer{
-    background-color: white;
+    background-color: black;
+    color: white;
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
