--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,100 @@
+/*sección stats*/
+span{
+    color: rgb(250, 234, 10);
+}
 
+.grid2{
+    background-color: rgb(209, 90, 90);
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    height: 50px;
+    font-size: larger;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin: 20px;
+}
+
+.visitors{
+    grid-column: 1;
+    grid-row: 1; 
+    width: 250px;
+    align-items: center;
+    text-align: center;
+}
+.orders{
+    grid-column: 2;
+    grid-row: 1;
+    width: 250px;
+    align-items: center;
+    text-align: center;
+}
+
+.boys{
+    grid-column: 3;
+    grid-row: 1;
+    width: 250px;
+    align-items: center;
+    text-align: center;
+}
+
+.exp{
+    grid-column: 4;
+    grid-row: 1;
+    width: 250px;
+    align-items: center;
+    text-align: center;
+}
+
+.visitors b, .orders b, .boys b, .exp b{
+    font-size: xx-large;
+}
+
+
+
+/*about us*/
+
+.grid_about{
+    display: grid;
+    font-size: large;
+    justify-content: justify;
+    padding: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    height: 500px;
+    background-color: thistle;
+    width: 100%;
+}
+.grid_about h1{
+    font-size: xx-large;
+    margin-bottom: 20px;
+    grid-column: 1;
+    grid-row: 1;
+    width: 50%;
+}
+
+.grid_about p{
+    font-size: medium;
+    margin-bottom: 20px;
+    font-size: large;
+    grid-column: 1;
+    grid-row: 2;
+    width: 50%;
+}
+
+.grid_about input[type="button"]{
+    height: 50px; 
+    width: 250px; 
+    background-color: orange;
+    color: white;
+    cursor: pointer;
+    display: inline-block;
+    font-size: large;
+    border-radius: 15px;
+    grid-column: 1;
+    grid-row: 3;
+    width: 50%;
+}
 
 /*Sección Kebab*/
 
@@ -7,6 +103,8 @@
     margin-right: 0;
     margin-left: auto;
     background-color: gainsboro;
+    margin-top: 50px;
+    height: 500px;
 }
 /*penúltima sección*/
 
@@ -16,6 +114,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 10px;
+    width: 50%;
 }
 
 .info{
@@ -53,9 +152,10 @@ input[type="text"]{
     height: 50px; 
     width: 250px; 
 }
+
 textarea{
   height: 100px; 
-  width: 540px; 
+  width: 570px; 
 }
 
 .Message2{
@@ -77,10 +177,20 @@ input[type="submit"]{
 
 .despedida{
     background-color: gainsboro;
+    position: relative;
+    padding: 50px;
+}
+
+.despedida h2{
+    position: absolute;
+    font-size: x-large;
+    top: -50px;
+    right: 200px;
+    font-weight: bold;
+    background-color: yellow;
+    padding: 30px;
 }
 .despedida h1{
-    justify-content: center;
-    align-items: center;
     text-align: center;
 }
 
