--- a/Pr-ctica/styles/header.css
+++ b/Pr-ctica/styles/header.css
@@ -3,7 +3,7 @@
     background-color: yellow;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(7, 1fr);
     gap: 10px;
 }
 
@@ -16,35 +16,35 @@
 }
 
 .Home{
-    grid-column: 1;
-    grid-row: 1;
-    text-decoration: none;
-}
-
-.Menu{
     grid-column: 2;
     grid-row: 1;
     text-decoration: none;
 }
 
-.Services{
+.Menu{
     grid-column: 3;
     grid-row: 1;
     text-decoration: none;
 }
 
-.Contact{
+.Services{
     grid-column: 4;
+    grid-row: 1;
+    text-decoration: none;
+}
+
+.Contact{
+    grid-column: 5;
     grid-row: 1;
 }
 
 .Search{
-    grid-column: 5;
+    grid-column: 6;
     grid-row: 1;
 }   
 
 .Phone{
-    grid-column: 6;
+    grid-column: 7;
     grid-row: 1;
 }
 
@@ -52,4 +52,11 @@ nav[id="home"]{
     background-color: black;
     font-size: 28px;
     color: white
+}
+
+.grid_header img {
+    grid-column: 1;
+    grid-row: 1;
+    max-width: 100px;
+    height: auto;
 }
