--- a/Pr-ctica/styles/footer.css
+++ b/Pr-ctica/styles/footer.css
@@ -2,6 +2,7 @@ footer {
     background-color: black;
     color: white;
     padding: 30px 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 footer p {
