--- a/Pr-ctica/styles/main.css
+++ b/Pr-ctica/styles/main.css
@@ -10,7 +10,7 @@ span{
     justify-content: space-between;
     flex-direction: row-reverse;
     align-items: center;
-    background-image: url(images/Fondo.jpeg);
+    background-image: url(images/Fondo.jepg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -26,6 +26,7 @@ span{
     width: 50%;
     padding: 120px;
     margin: 130px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .Home_section h1{
@@ -55,7 +56,7 @@ span{
     font-size: larger;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin: 20px;
+    margin: 10px;
 }
 
 .visitors{
